--- a/face/src/main/res/layout/view_vatom_error.xml
+++ b/face/src/main/res/layout/view_vatom_error.xml
@@ -7,15 +7,25 @@
     android:id="@+id/activated"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:scaleType="centerInside"
+    android:scaleType="fitCenter"
+    />
+
+  <ProgressBar
+    style="?android:attr/progressBarStyle"
+    android:id="@+id/loader"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:layout_centerInParent="true"
+    android:visibility="gone"
     />
 
   <ImageView
     android:id="@+id/error"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    android:layout_alignParentRight="true"
+    android:layout_alignParentLeft="true"
     android:layout_alignParentTop="true"
     android:src="@drawable/ic_error_orange_24dp"
+    android:padding="5dp"
     />
 </RelativeLayout>
